Criando relatorio de emissão de carteira

--- a/Adonai_svendas.dproj
+++ b/Adonai_svendas.dproj
@@ -131,6 +131,10 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="Fontes\FBackup.pas">
+            <Form>frmBackup</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
